# lexicon

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  OPENSOURCE_AUDIT.md  README.md  pyproject.toml  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
extension/: background.js  content.js  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
lexicon/: __init__.py  __main__.py  cli.py  compiler.py  config.py  export.py  linker.py  linter.py  qa.py  research.py  server.py  ultramemory_client.py  utils.py  watch.py
lexicon/connectors/: __init__.py  bookmarks.py  files.py  rss.py  url.py  web_search.py
lexicon/static/: app.js  index.html  style.css
lexicon/templates/: briefing.md.j2  report.md.j2  slides.md.j2
tests/: test_bookmarks.py  test_compiler.py  test_config.py  test_export.py  test_linker.py  test_qa.py  test_research.py  test_server.py  test_ultramemory_client.py  test_watch.py
ultraknowledge/: __init__.py  cli.py  compiler.py  config.py  export.py  linker.py  linter.py  qa.py  research.py  server.py  ultramemory_client.py  watch.py
ultraknowledge/connectors/: __init__.py  files.py  rss.py  url.py  web_search.py
ultraknowledge/static/: app.js  index.html  style.css
ultraknowledge/templates/: briefing.md.j2  report.md.j2  slides.md.j2
