[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lexicon"
version = "0.1.0"
description = "LLM-compiled personal knowledge base engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "lexicon contributors" }]
keywords = ["knowledge-base", "llm", "wiki", "semantic-search", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "litellm>=1.40.0",
    "ultramemory>=0.2.2",
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "exa-py>=1.0",
    "jinja2>=3.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "readabilipy>=0.2",
    "trafilatura>=1.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
local = ["ollama>=0.2"]
pdf = ["markdown>=3.6", "weasyprint>=61.2", "pdfkit>=1.0", "pymupdf>=1.24"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "pytest-httpx>=0.30"]

[project.scripts]
uk = "lexicon.cli:cli"

[project.urls]
Homepage = "https://github.com/jared-goering/lexicon"
Repository = "https://github.com/jared-goering/lexicon"
Issues = "https://github.com/jared-goering/lexicon/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
